# coding-agent-failure-atlas

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml
data/: cases.jsonl
docs/: ANNOTATION_GUIDE.md  DATASHEET.md  ENGINEERING_RATIONALE.md  NOVELTY.md  RELATED_WORK.md  TAXONOMY.md  TECHNICAL_SCOPE.md
schemas/: case.schema.json
scripts/: materialise_dataset.py  quality_gate.py
src/failure_atlas/: __init__.py  __main__.py  analysis.py  cli.py  dataset.py  taxonomy.py
tests/: test_cli.py  test_dataset.py
